Changed gaminganywhere configuration file to use MLHE instead of LHE

--- a/ga/config/common/video-lhe.conf
+++ b/ga/config/common/video-lhe.conf
@@ -2,8 +2,8 @@
 [video]
 # video configuration
 video-mimetype = video/LHE
-video-encoder = lhe
-video-decoder = lhe
-video-fps = 1
+video-encoder = mlhe
+video-decoder = mlhe
+video-fps = 25
 video-renderer = software		# hardware or software
 
