--- a/deps.src/Makefile.packages
+++ b/deps.src/Makefile.packages
@@ -24,7 +24,7 @@ X265		= x265_1.9.tar.gz
 X265DIR		= x265_1.9
 XVID		= xvidcore-1.3.4.tar.bz2
 XVIDDIR		= xvidcore
-FFMPEG		= ffmpeg-2.8.8.tar.bz2
+#FFMPEGDIR	= ffmpeg-2.8.8 #//RAL: Despite is not the good way, we will define FFmpeg source folder in environments
 FFMPEGDIR	= ffmpeg-2.8.8
 LIVE555		= live.2015.09.24.tar.gz
 LIVE555DIR	= live
