Corrections related to previous commit.

--- a/deps.src/Makefile
+++ b/deps.src/Makefile
@@ -162,7 +162,7 @@ ffmpeg:
 		--extra-ldflags=-L$(GADEPS)/lib
 	make -C $(FFMPEGDIR) $(PARALLEL_MAKE)
 	make -C $(FFMPEGDIR) install
-	rm -rf $(FFMPEGDIR)
+	#rm -rf $(FFMPEGDIR)
 
 live555:
 	$(TGZUNPACK) $(LIVE555)
