Added Moving-LHE support (MLHE). Some corrections also apply in this commitment regarding to LHE support. Refer to commitments (SHAs): 103c922c9219b4533b3752fd5eb0e2f970ca1b26  06f5e5d7a064d28a435092750ead5675aaca06db  937aef88c5e07ccaeecfb9ac0166bb14e26eee44

--- a/ga/config/client.mlhe.abs.conf
+++ b/ga/config/client.mlhe.abs.conf
@@ -3,7 +3,7 @@
 
 [core]
 include = common/controller.conf
-include = common/video-lhe.conf
+include = common/video-mlhe.conf
 include = common/audio-lame.conf
 
 [ga-client]
