--- a/ga/config/common/video-mlhe-param.conf
+++ b/ga/config/common/video-mlhe-param.conf
@@ -13,8 +13,9 @@ video-specific[threads] = 2		# -t 6
 video-specific[filter-source-pixelformat] = RGBA	
 
 
-# LHE options
+# MLHE options
 video-specific[pr_metrics] = 0
-video-specific[basic_lhe] = 0
+video-specific[basic_mlhe] = 0
 video-specific[ql] = 24
 video-specific[subsampling_average] = 0
+
