--- a/ga/config/common/video-mlhe.conf
+++ b/ga/config/common/video-mlhe.conf
@@ -1,8 +1,8 @@
 
 [video]
 # video configuration
-video-mimetype = video/LHE
-video-encoder = lhe
-video-decoder = lhe
+video-mimetype = video/MLHE
+video-encoder = mlhe
+video-decoder = mlhe
 video-fps = 25
 video-renderer = software		# hardware or software
