--- a/ga/config/server.mlhe.desktop.conf
+++ b/ga/config/server.mlhe.desktop.conf
@@ -5,7 +5,7 @@
 [core]
 include = common/server-common.conf
 include = common/controller.conf
-include = common/video-lhe.conf
+include = common/video-mlhe.conf
 include = common/audio-lame.conf
 
 [ga-server-periodic]
@@ -16,4 +16,4 @@ capture-cursor = true
 #save-yuv-image = /tmp/capture.yuv
 #embed-colorcode = 5 80 80
 
-#logfile = /tmp/loglhe.log
+#logfile = /tmp/logmlhe.log
