Correction on commitment SHA 90967069e13e5f1b581b1975768c58e471ce2287. We now disable watchdog in a proper way (using configuration files).

--- a/ga/config/client.lhe.abs.conf
+++ b/ga/config/client.lhe.abs.conf
@@ -17,4 +17,4 @@ video-renderer = software
 #save-yuv-image = D:\TEMP\capture.yuv
 #save-yuv-image = /tmp/capture.yuv
 
-enable-watchdog = true
+enable-watchdog = false
