--- a/ga/config/client.mlhe.abs.conf
+++ b/ga/config/client.mlhe.abs.conf
@@ -17,4 +17,4 @@ video-renderer = software
 #save-yuv-image = D:\TEMP\capture.yuv
 #save-yuv-image = /tmp/capture.yuv
 
-enable-watchdog = true
+enable-watchdog = false
