Seems that settings 'max-tolerable-video-delay = 0' (client side) and/or 'video-fps' (video common configuration file) are related to a buffering error in the client decoder: '(...)[lhe @ 0x7fd0cc20d400] [IMGUTILS @ 0x7fd0dbffd4b0] Picture size 3753639936x922696311 is invalid/ video_get_buffer: image parameters invalid/ get_buffer() failed/ (...)'. Works for some seconds and buffering fails. To be reviewed.

--- a/ga/config/client.lhe.abs.conf
+++ b/ga/config/client.lhe.abs.conf
@@ -7,7 +7,7 @@ include = common/video-lhe.conf
 include = common/audio-lame.conf
 
 [ga-client]
-max-tolerable-video-delay = 0
+#max-tolerable-video-delay = 0
 video-specific[threads] = auto
 
 # comment out the below line if you intended to use s/w renderer
