--- a/ga/config/server.mlhe.openttd.conf
+++ b/ga/config/server.mlhe.openttd.conf
@@ -6,7 +6,7 @@
 include = common/server-common.conf
 include = common/controller.conf
 #include = common/video-x264.conf
-include = common/video-lhe.conf
+include = common/video-mlhe.conf
 #include = common/video-x264-param.conf
 include = common/audio-lame.conf
 
