Removed non used live555 muxing/demuxing and encoding/decoding (e.g. FFmpeg, x.26X based) related code (at both server and client). Now we are using an independent library, 'MediaProcessors', for muxing/demuxing and coding. Modified server and client to insert new glue code to use the 'MediaProcessors' library.

--- a/ga/config/common/video-mlhe.conf
+++ b/ga/config/common/video-mlhe.conf
@@ -2,7 +2,7 @@
 [video]
 # video configuration
 video-mimetype = video/MLHE
-video-encoder = mlhe
-video-decoder = mlhe
+video-encoder = ffmpeg_mlhe_enc
+video-decoder = ffmpeg_mlhe_enc
 video-fps = 10
 video-renderer = software		# hardware or software
