--- a/ga/config/common/video-x264.conf
+++ b/ga/config/common/video-x264.conf
@@ -2,11 +2,8 @@
 [video]
 # video configuration
 video-mimetype = video/H264
-video-encoder = libx264
-video-decoder = h264_dxva2 h264
-#video-decoder = h264_vda h264_dxva2 h264_vaapi h264_vdpau h264
-# h264 decoder w/ HW accel:
-# vda -> mac os x; dxva2 -> windows; vaapi/vdpau -> Linux
-video-fps = 24
-video-renderer = hardware		# hardware or software
+video-encoder = ffmpeg_x264_enc
+video-decoder = ffmpeg_x264_dec
 
+video-fps = 10
+video-renderer = hardware		# hardware or software
