--- a/ga/config/server.openttd.conf
+++ b/ga/config/server.openttd.conf
@@ -11,7 +11,8 @@ include = common/audio-lame.conf
 
 [ga-server-periodic]
 display = :0
-find-window-name = OpenTTD 1.3.0
+find-window-name = OpenTTD 1.7.1
 
-enable-audio = true
+enable-audio = false
+#true
 
