--- a/ga/Makefile.def
+++ b/ga/Makefile.def
@@ -53,8 +53,6 @@ L5CF	= -I$(GADEPS)/include/live555
 L5LD	= -L$(GADEPS)/lib -lliveMedia -lBasicUsageEnvironment -lUsageEnvironment -lgroupsock
 
 # // { //RAL: Add MediaProcessors libs.
-AVCLD+= -L$(MEDIAPROCSDIR)/_install_dir_x86/lib -luriparser -lcjson \
--lmediaprocsutils -lmediaprocs -lmediaprocscodecs -lmediaprocsmuxers
-
-CFLAGS+= -I/home/ral/workspace/MediaProcessors_selfcontained/_install_dir_x86/include
+AVCLD+= -L$(GADEPS)/lib -lx264 -luriparser -lcjson -lmediaprocsutils -lmediaprocs -lmediaprocscodecs -lmediaprocsmuxers -lSDL2
+CFLAGS+= -I$(GADEPS)/include
 # // } //RAL
