--- a/ga/module/Makefile.common
+++ b/ga/module/Makefile.common
@@ -23,8 +23,6 @@ endif
 	$(CXX) -c -g $(CFLAGS) $<
 
 # // { //RAL: Add MediaProcessors libs.
-LDFLAGS+= -L$(MEDIAPROCSDIR)/_install_dir_x86/lib -luriparser -lcjson \
--lmediaprocsutils -lmediaprocs -lmediaprocscodecs -lmediaprocsmuxers
-
-CFLAGS+= -I/home/ral/workspace/MediaProcessors_selfcontained/_install_dir_x86/include
+AVCLD+= -L$(GADEPS)/lib -lx264 -luriparser -lcjson -lmediaprocsutils -lmediaprocs -lmediaprocscodecs -lmediaprocsmuxers
+CFLAGS+= -I$(GADEPS)/include
 # // } //RAL
