Configurations files cleaned.

--- a/ga/config/common/audio-lame.conf
+++ b/ga/config/common/audio-lame.conf
@@ -1,9 +1,9 @@
 
 [audio]
 # audio configuration
-audio-mimetype = audio/MPEG
-audio-encoder = libmp3lame
-audio-decoder = mp3
+audio-mimetype = audio/MP3
+audio-encoder = ffmpeg_mp3_enc
+audio-decoder = ffmpeg_mp3_dec
 audio-bitrate = 128000
 audio-samplerate = 44100
 audio-channels = 2
