--- a/ga/config/server.openttd.conf
+++ b/ga/config/server.openttd.conf
@@ -13,6 +13,4 @@ include = common/audio-lame.conf
 display = :0
 find-window-name = OpenTTD 1.7.1
 
-enable-audio = false
-#true
-
+enable-audio = true
