added resize fullscreen

--- a/ga/config/client.mlhe.abs.conf
+++ b/ga/config/client.mlhe.abs.conf
@@ -12,6 +12,7 @@ video-specific[threads] = auto
 
 # comment out the below line if you intended to use s/w renderer
 video-renderer = software
+#video-render = hardware
 
 # comment out the below lines for measurement and testing purpose
 #save-yuv-image = D:\TEMP\capture.yuv
