--- a/ga/config/common/video-mlhe.conf
+++ b/ga/config/common/video-mlhe.conf
@@ -6,3 +6,4 @@ video-encoder = ffmpeg_mlhe_enc
 video-decoder = ffmpeg_mlhe_enc
 video-fps = 10
 video-renderer = software		# hardware or software
+#video-renderer = hardware
