--- a/ga/module/payloader-upm/Makefile
+++ b/ga/module/payloader-upm/Makefile
@@ -1,7 +1,7 @@
 
 include ../Makefile.common
 
-CFLAGS	+= -I$(GADEPS)/include/libmediaprocspayloader
+#CFLAGS	+= -I$(GADEPS)/include/libmediaprocspayloader
 
 OBJS	= server-payloader-upm.o
 TARGET	= server-payloader-upm.$(EXT)
